Name:                SafeSignUp
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             GPL-3
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable SafeSignUp
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    bytestring                >= 0.10.2   && < 0.11,
    heist                     >= 0.13    && < 0.14,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl                       >= 2       && < 3,
    snap                      >= 0.13    && < 0.14,
    snap-core                 >= 0.9     && < 0.11,
    snap-server               >= 0.9     && < 0.11,
    snap-loader-static        >= 0.9     && < 0.10,
    text                      >= 0.11    && < 0.12,
    time                      >= 1.1     && < 1.5,
    digestive-functors-snap   >= 0.6.0.1 && < 0.7,
    digestive-functors-heist  >= 0.8.4.0 && < 0.9,
    digestive-functors        >= 0.6.2.0 && < 0.9,
    crypto-pubkey-openssh     >= 0.2.4   && < 0.3,
    RSA                       >= 2.0 && < 3.0,
    crypto-pubkey-types       >= 0.4.1 && < 0.5,
    crypto-api                >= 0.13 && < 0.14,
    snaplet-acid-state        >= 0.2.6 && < 0.3,
    safecopy                  >= 0.8.2 && < 0.9,
    xmlhtml                   >= 0.1

  if flag(old-base)
    build-depends:
      base                      >= 4        && < 4.4,
      lens                      >= 3.7.6    && < 3.8
  else
    build-depends:
      base                      >= 4.4      && < 5,
      lens                      >= 3.7.6    && < 3.11

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
